# fs2open.github.com

./: .clang-format  .gitignore  CMakeLists.txt  ChangeLog  Makefile  Makefile.am  Makefile.common  Makefile.darwin  Makefile.linux  README.md  TODO  configure.ac
code/: CMakeLists.txt  Makefile.am  prefix_header.h  source_groups.cmake
code/ai/: ai.h  ai_flags.h  ai_profiles.cpp  ai_profiles.h  aibig.cpp  aicode.cpp  aigoals.cpp  aigoals.h  aiinternal.h  aiturret.cpp
code/anim/: packunpack.cpp
code/asteroid/: asteroid.cpp
code/autopilot/: autopilot.cpp  autopilot.h
code/bmpman/: bm_examples.cpp  bm_internal.h  bmpman.cpp  bmpman.h
code/camera/: camera.cpp  camera.h
code/cfile/: cfile.cpp  cfile.h  cfilearchive.cpp  cfilearchive.h  cfilelist.cpp  cfilesystem.cpp
code/cfilearchiver/: cfilearchiver.cpp
code/cmdline/: cmdline.cpp  cmdline.h
code/controlconfig/: controlsconfig.cpp  controlsconfig.h  controlsconfigcommon.cpp
code/cutscene/: Decoder.h  VideoPresenter.h  cutscenes.cpp  cutscenes.h  movie.cpp  movie.h  player.h
code/ddsutils/: ddsutils.cpp
code/debris/: debris.cpp
code/debugconsole/: console.cpp  console.h  consolecmds.cpp  consoleparse.cpp  consoleparse.h
code/decals/: decals.cpp
code/def_files/: def_files-generic.cpp  def_files-win32.cpp  def_files.h
code/events/: events.cpp  events.h
code/exceptionhandler/: exceptionhandler.cpp  exceptionhandler.h
code/external_dll/: externalcode.h
code/fireball/: fireballs.cpp  fireballs.h  warpineffect.cpp
code/fs2netd/: fs2netd_client.cpp  fs2netd_client.h  tcp_client.h
code/gamehelp/: contexthelp.cpp  contexthelp.h  gameplayhelp.cpp
code/gamesnd/: eventmusic.cpp  eventmusic.h  gamesnd.cpp  gamesnd.h
code/globalincs/: alphacolors.cpp  alphacolors.h  fsmemory.h  globals.h  linklist.h  mspdb_callstack.cpp  pstypes.h  scp_defines.h  systemvars.cpp  toolchain.h  version.cpp  version.h  vmallocator.h  windebug.cpp
code/graphics/: 2d.cpp  2d.h  font.h  generic.cpp  grbatch.cpp  grstub.h  light.cpp  light.h  line.h  line_draw_list.h  matrix.cpp  matrix.h  shadows.cpp  shadows.h  tmapper.h  uniforms.cpp  uniforms.h
code/headtracking/: freetrack.cpp  freetrack.h  headtracking.cpp  headtracking.h  headtracking_internal.h  trackir.cpp  trackir.h  trackirpublic.cpp  trackirpublic.h
code/hud/: hud.cpp  hud.h  hudartillery.cpp  hudartillery.h  hudbrackets.cpp  hudbrackets.h  hudconfig.cpp  hudconfig.h  hudescort.cpp  hudescort.h  hudets.cpp  hudets.h  hudgauges.h  hudlock.cpp  hudmessage.cpp  hudmessage.h  hudnavigation.h  hudobserver.cpp  hudparse.cpp  hudparse.h  hudreticle.cpp  hudreticle.h  hudshield.cpp  hudshield.h  hudsquadmsg.cpp  hudsquadmsg.h  hudtarget.cpp  hudtarget.h  hudtargetbox.cpp  hudtargetbox.h
code/iff_defs/: iff_defs.cpp  iff_defs.h
code/inetfile/: cftp.cpp  chttpget.cpp  inetgetfile.h
code/io/: cursor.cpp  cursor.h  joy-sdl.cpp  joy.h  joy_ff-sdl.cpp  joy_ff.h  key.cpp  key.h  keycontrol.cpp  mouse.h  timer.cpp
code/jumpnode/: jumpnode.cpp  jumpnode.h
code/lab/: lab.cpp  wmcgui.cpp  wmcgui.h
code/lighting/: lighting.cpp  lighting.h
code/localization/: fhash.cpp  fhash.h  localize.cpp  localize.h
code/math/: bitarray.h  fix.cpp  floating.cpp  fvi.cpp  staticrand.cpp  staticrand.h  vecmat.cpp  vecmat.h
code/menuui/: barracks.cpp  barracks.h  credits.cpp  fishtank.cpp  mainhallmenu.cpp  mainhallmenu.h  mainhalltemp.cpp  optionsmenu.cpp  optionsmenu.h  playermenu.cpp  playermenu.h  readyroom.cpp  readyroom.h  snazzyui.cpp  techmenu.h  trainingmenu.cpp  trainingmenu.h
code/mission/: missionbriefcommon.cpp  missionbriefcommon.h  missioncampaign.cpp  missioncampaign.h  missiongoals.cpp  missiongoals.h  missiongrid.cpp  missionhotkey.cpp  missionload.cpp  missionload.h  missionmessage.cpp  missionmessage.h  missionparse.cpp  missionparse.h  missiontraining.cpp
code/missionui/: chatbox.cpp  fictionviewer.cpp  fictionviewer.h  missionbrief.cpp  missionbrief.h  missioncmdbrief.h  missiondebrief.cpp  missiondebrief.h  missionloopbrief.cpp  missionpause.cpp  missionpause.h  missionscreencommon.cpp  missionscreencommon.h  missionshipchoice.cpp  missionweaponchoice.cpp  redalert.cpp
code/mod_table/: mod_table.cpp
code/model/: model.h  model_flags.h  modelanim.cpp  modelanim.h  modelcollide.cpp  modelinterp.cpp  modelread.cpp  modelrender.cpp  modelrender.h
code/nebula/: neb.cpp  neblightning.cpp  neblightning.h
code/network/: chat_api.h  multi.cpp  multi_campaign.cpp  multi_dogfight.cpp  multi_endgame.cpp  multi_endgame.h  multi_ingame.cpp  multi_kick.cpp  multi_kick.h  multi_log.cpp  multi_log.h  multi_obj.cpp  multi_observer.h  multi_options.cpp  multi_options.h  multi_pause.h  multi_pinfo.cpp  multi_ping.cpp  multi_pxo.cpp  multi_rate.cpp  multi_respawn.cpp  multi_respawn.h  multi_sexp.h  multi_team.cpp  multi_team.h  multi_voice.cpp  multilag.cpp  multilag.h  multimsgs.cpp  multimsgs.h  multiteamselect.cpp  multiui.cpp  multiutil.cpp  stand_gui-unix.cpp  stand_gui.cpp  stand_gui.h
code/object/: collidedebrisship.cpp  collideshipship.cpp  collideshipweapon.cpp  collideweaponweapon.cpp  deadobjectdock.h  objcollide.cpp  objcollide.h  object.cpp  object.h  objectdock.cpp  objectshield.cpp  objectsnd.cpp  objectsnd.h  objectsort.cpp  parseobjectdock.cpp  parseobjectdock.h  waypoint.h
code/observer/: observer.h
code/osapi/: dialogs.cpp  osapi.cpp  osapi.h  outwnd.cpp  outwnd.h
code/parse/: encrypt.cpp  encrypt.h  generic_log.cpp  generic_log.h  parselo.cpp  parselo.h  sexp.cpp  sexp.h
code/particle/: ParticleEffect.h  ParticleManager.cpp  ParticleSourceWrapper.cpp  ParticleSourceWrapper.h  particle.cpp  particle.h
code/pcxutils/: pcxutils.cpp  pcxutils.h
code/physics/: physics.cpp
code/pilotfile/: BinaryFileHandler.cpp  BinaryFileHandler.h  FileHandler.h  JSONFileHandler.cpp  JSONFileHandler.h  csg.cpp  csg_convert.cpp  pilotfile.cpp  pilotfile.h  pilotfile_convert.cpp  pilotfile_convert.h  plr.cpp
code/playerman/: managepilot.cpp  player.h  playercontrol.cpp
src/: Makefile  Makefile.am  Makefile.vars  config.hh  config.hpp  defs.hh  defs.hpp
(+1712 files in other folders)
