## -*- mode: makefile -*-

ACLOCAL_AMFLAGS = -I etc/m4

SUBDIRS =                                       \
    external/lua                                \
    external/glad                               \
    external/mongoose

bin_PROGRAMS = fs2

fs2_SOURCES =                                   \
    ai/ai.cpp                                   \
    ai/ai_profiles.cpp                          \
    ai/aibig.cpp                                \
    ai/aicode.cpp                               \
    ai/aigoals.cpp                              \
    ai/aiturret.cpp                             \
    anim/animplay.cpp                           \
    anim/packunpack.cpp                         \
    asteroid/asteroid.cpp                       \
    autopilot/autopilot.cpp                     \
    bmpman/bm_examples.cpp                      \
    bmpman/bmpman.cpp                           \
    camera/camera.cpp                           \
    cfile/cfile.cpp                             \
    cfile/cfilearchive.cpp                      \
    cfile/cfilelist.cpp                         \
    cfile/cfilesystem.cpp                       \
    cmdline/cmdline.cpp                         \
    cmeasure/cmeasure.cpp                       \
    controlconfig/controlsconfig.cpp            \
    controlconfig/controlsconfigcommon.cpp      \
    cutscene/Decoder.cpp                        \
    cutscene/VideoPresenter.cpp                 \
    cutscene/cutscenes.cpp                      \
    cutscene/ffmpeg/AudioDecoder.cpp            \
    cutscene/ffmpeg/FFMPEGDecoder.cpp           \
    cutscene/ffmpeg/SubtitleDecoder.cpp         \
    cutscene/ffmpeg/VideoDecoder.cpp            \
    cutscene/ffmpeg/internal.cpp                \
    cutscene/movie.cpp                          \
    cutscene/player.cpp                         \
    ddsutils/ddsutils.cpp                       \
    debris/debris.cpp                           \
    debugconsole/console.cpp                    \
    debugconsole/consolecmds.cpp                \
    debugconsole/consoleparse.cpp               \
    decals/decals.cpp                           \
    events/events.cpp                           \
    exceptionhandler/exceptionhandler.cpp       \
    fireball/fireballs.cpp                      \
    fireball/warpineffect.cpp                   \
    freespace2/SDLGraphicsOperations.cpp        \
    freespace2/freespace.cpp                    \
    freespace2/levelpaging.cpp                  \
    fs2netd/fs2netd_client.cpp                  \
    fs2netd/tcp_client.cpp                      \
    fs2netd/tcp_socket.cpp                      \
    gamehelp/contexthelp.cpp                    \
    gamehelp/gameplayhelp.cpp                   \
    gamesequence/gamesequence.cpp               \
    gamesnd/eventmusic.cpp                      \
    gamesnd/gamesnd.cpp                         \
    globalincs/alphacolors.cpp                  \
    globalincs/memory/memory.cpp                \
    globalincs/mspdb_callstack.cpp              \
    globalincs/safe_strings.cpp                 \
    globalincs/systemvars.cpp                   \
    globalincs/version.cpp                      \
    graphics/2d.cpp                             \
    graphics/decal_draw_list.cpp                \
    graphics/generic.cpp                        \
    graphics/grbatch.cpp                        \
    graphics/grstub.cpp                         \
    graphics/light.cpp                          \
    graphics/line_draw_list.cpp                 \
    graphics/material.cpp                       \
    graphics/matrix.cpp                         \
    graphics/opengl/ShaderProgram.cpp           \
    graphics/opengl/gropengl.cpp                \
    graphics/opengl/gropenglbmpman.cpp          \
    graphics/opengl/gropengldeferred.cpp        \
    graphics/opengl/gropengldraw.cpp            \
    graphics/opengl/gropenglpostprocessing.cpp  \
    graphics/opengl/gropenglquery.cpp           \
    graphics/opengl/gropenglshader.cpp          \
    graphics/opengl/gropenglstate.cpp           \
    graphics/opengl/gropenglsync.cpp            \
    graphics/opengl/gropengltexture.cpp         \
    graphics/opengl/gropengltnl.cpp             \
    graphics/paths/NanoVGRenderer.cpp           \
    graphics/paths/PathRenderer.cpp             \
    graphics/paths/nanovg/nanovg.c              \
    graphics/render.cpp                         \
    graphics/shadows.cpp                        \
    graphics/software/FSFont.cpp                \
    graphics/software/FontManager.cpp           \
    graphics/software/NVGFont.cpp               \
    graphics/software/VFNTFont.cpp              \
    graphics/software/font.cpp                  \
    graphics/uniforms.cpp                       \
    graphics/util/GPUMemoryHeap.cpp             \
    graphics/util/UniformAligner.cpp            \
    graphics/util/UniformBuffer.cpp             \
    graphics/util/UniformBufferManager.cpp      \
    hud/hud.cpp                                 \
    hud/hudartillery.cpp                        \
    hud/hudbrackets.cpp                         \
    hud/hudconfig.cpp                           \
    hud/hudescort.cpp                           \
    hud/hudets.cpp                              \
    hud/hudlock.cpp                             \
    hud/hudmessage.cpp                          \
    hud/hudnavigation.cpp                       \
    hud/hudobserver.cpp                         \
    hud/hudparse.cpp                            \
    hud/hudreticle.cpp                          \
    hud/hudshield.cpp                           \
    hud/hudsquadmsg.cpp                         \
    hud/hudtarget.cpp                           \
    hud/hudtargetbox.cpp                        \
    hud/hudwingmanstatus.cpp                    \
    iff_defs/iff_defs.cpp                       \
    inetfile/cftp.cpp                           \
    inetfile/chttpget.cpp                       \
    inetfile/inetgetfile.cpp                    \
    io/cursor.cpp                               \
    io/joy-sdl.cpp                              \
    io/joy_ff-sdl.cpp                           \
    io/key.cpp                                  \
    io/keycontrol.cpp                           \
    io/mouse.cpp                                \
    io/timer.cpp                                \
    jpgutils/jpgutils.cpp                       \
    jumpnode/jumpnode.cpp                       \
    lab/lab.cpp                                 \
    lab/wmcgui.cpp                              \
    libs/ffmpeg/FFmpeg.cpp                      \
    libs/ffmpeg/FFmpegContext.cpp               \
    libs/renderdoc/renderdoc.cpp                \
    lighting/lighting.cpp                       \
    localization/fhash.cpp                      \
    localization/localize.cpp                   \
    math/fix.cpp                                \
    math/floating.cpp                           \
    math/fvi.cpp                                \
    math/spline.cpp                             \
    math/staticrand.cpp                         \
    math/vecmat.cpp                             \
    menuui/barracks.cpp                         \
    menuui/credits.cpp                          \
    menuui/fishtank.cpp                         \
    menuui/mainhallmenu.cpp                     \
    menuui/mainhalltemp.cpp                     \
    menuui/optionsmenu.cpp                      \
    menuui/optionsmenumulti.cpp                 \
    menuui/playermenu.cpp                       \
    menuui/readyroom.cpp                        \
    menuui/snazzyui.cpp                         \
    menuui/techmenu.cpp                         \
    menuui/trainingmenu.cpp                     \
    mission/missionbriefcommon.cpp              \
    mission/missioncampaign.cpp                 \
    mission/missiongoals.cpp                    \
    mission/missiongrid.cpp                     \
    mission/missionhotkey.cpp                   \
    mission/missionload.cpp                     \
    mission/missionlog.cpp                      \
    mission/missionmessage.cpp                  \
    mission/missionparse.cpp                    \
    mission/missiontraining.cpp                 \
    missionui/chatbox.cpp                       \
    missionui/fictionviewer.cpp                 \
    missionui/missionbrief.cpp                  \
    missionui/missioncmdbrief.cpp               \
    missionui/missiondebrief.cpp                \
    missionui/missionloopbrief.cpp              \
    missionui/missionpause.cpp                  \
    missionui/missionscreencommon.cpp           \
    missionui/missionshipchoice.cpp             \
    missionui/missionweaponchoice.cpp           \
    missionui/redalert.cpp                      \
    mod_table/mod_table.cpp                     \
    model/modelanim.cpp                         \
    model/modelcollide.cpp                      \
    model/modelinterp.cpp                       \
    model/modeloctant.cpp                       \
    model/modelread.cpp                         \
    model/modelrender.cpp                       \
    nebula/neb.cpp                              \
    nebula/neblightning.cpp                     \
    network/chat_api.cpp                        \
    network/multi.cpp                           \
    network/multi_campaign.cpp                  \
    network/multi_data.cpp                      \
    network/multi_dogfight.cpp                  \
    network/multi_endgame.cpp                   \
    network/multi_ingame.cpp                    \
    network/multi_kick.cpp                      \
    network/multi_log.cpp                       \
    network/multi_obj.cpp                       \
    network/multi_observer.cpp                  \
    network/multi_options.cpp                   \
    network/multi_pause.cpp                     \
    network/multi_pinfo.cpp                     \
    network/multi_ping.cpp                      \
    network/multi_pmsg.cpp                      \
    network/multi_pxo.cpp                       \
    network/multi_rate.cpp                      \
    network/multi_respawn.cpp                   \
    network/multi_sexp.cpp                      \
    network/multi_team.cpp                      \
    network/multi_update.cpp                    \
    network/multi_voice.cpp                     \
    network/multi_xfer.cpp                      \
    network/multilag.cpp                        \
    network/multimsgs.cpp                       \
    network/multiteamselect.cpp                 \
    network/multiui.cpp                         \
    network/multiutil.cpp                       \
    network/psnet2.cpp                          \
    network/stand_gui-unix.cpp                  \
    network/stand_gui.cpp                       \
    object/collidedebrisship.cpp                \
    object/collidedebrisweapon.cpp              \
    object/collideshipship.cpp                  \
    object/collideshipweapon.cpp                \
    object/collideweaponweapon.cpp              \
    object/deadobjectdock.cpp                   \
    object/objcollide.cpp                       \
    object/object.cpp                           \
    object/objectdock.cpp                       \
    object/objectshield.cpp                     \
    object/objectsnd.cpp                        \
    object/objectsort.cpp                       \
    object/parseobjectdock.cpp                  \
    object/waypoint.cpp                         \
    observer/observer.cpp                       \
    osapi/DebugWindow.cpp                       \
    osapi/dialogs.cpp                           \
    osapi/osapi.cpp                             \
    osapi/osregistry.cpp                        \
    osapi/outwnd.cpp                            \
    parse/encrypt.cpp                           \
    parse/generic_log.cpp                       \
    parse/parselo.cpp                           \
    parse/sexp.cpp                              \
    parse/sexp/DynamicSEXP.cpp                  \
    parse/sexp/LuaSEXP.cpp                      \
    parse/sexp/sexp_lookup.cpp                  \
    particle/ParticleManager.cpp                \
    particle/ParticleSource.cpp                 \
    particle/ParticleSourceWrapper.cpp          \
    particle/effects/BeamPiercingEffect.cpp     \
    particle/effects/CompositeEffect.cpp        \
    particle/effects/ParticleEmitterEffect.cpp  \
    particle/effects/SingleParticleEffect.cpp   \
    particle/particle.cpp                       \
    particle/util/EffectTiming.cpp              \
    particle/util/ParticleProperties.cpp        \
    pcxutils/pcxutils.cpp                       \
    physics/physics.cpp                         \
    pilotfile/csg.cpp                           \
    pilotfile/csg_convert.cpp                   \
    pilotfile/pilotfile.cpp                     \
    pilotfile/pilotfile_convert.cpp             \
    pilotfile/plr.cpp                           \
    pilotfile/plr_convert.cpp                   \
    playerman/managepilot.cpp                   \
    playerman/playercontrol.cpp                 \
    pngutils/pngutils.cpp                       \
    popup/popup.cpp                             \
    popup/popupdead.cpp                         \
    radar/radar.cpp                             \
    radar/radardradis.cpp                       \
    radar/radarorb.cpp                          \
    radar/radarsetup.cpp                        \
    render/3dclipper.cpp                        \
    render/3ddraw.cpp                           \
    render/3dlaser.cpp                          \
    render/3dmath.cpp                           \
    render/3dsetup.cpp                          \
    render/batching.cpp                         \
    scripting/ade.cpp                           \
    scripting/ade_args.cpp                      \
    scripting/api/LuaEventCallback.cpp          \
    scripting/api/libs/audio.cpp                \
    scripting/api/libs/base.cpp                 \
    scripting/api/libs/bitops.cpp               \
    scripting/api/libs/cfile.cpp                \
    scripting/api/libs/graphics.cpp             \
    scripting/api/libs/hookvars.cpp             \
    scripting/api/libs/hud.cpp                  \
    scripting/api/libs/mission.cpp              \
    scripting/api/libs/parse.cpp                \
    scripting/api/libs/tables.cpp               \
    scripting/api/libs/testing.cpp              \
    scripting/api/libs/time_lib.cpp             \
    scripting/api/libs/utf8.cpp                 \
    scripting/api/objs/LuaSEXP.cpp              \
    scripting/api/objs/asteroid.cpp             \
    scripting/api/objs/background_element.cpp   \
    scripting/api/objs/beam.cpp                 \
    scripting/api/objs/camera.cpp               \
    scripting/api/objs/cockpit_display.cpp      \
    scripting/api/objs/control_info.cpp         \
    scripting/api/objs/controls.cpp             \
    scripting/api/objs/debris.cpp               \
    scripting/api/objs/enums.cpp                \
    scripting/api/objs/event.cpp                \
    scripting/api/objs/eye.cpp                  \
    scripting/api/objs/file.cpp                 \
    scripting/api/objs/font.cpp                 \
    scripting/api/objs/gameevent.cpp            \
    scripting/api/objs/gamestate.cpp            \
    scripting/api/objs/hudgauge.cpp             \
    scripting/api/objs/mc_info.cpp              \
    scripting/api/objs/message.cpp              \
    scripting/api/objs/model.cpp                \
    scripting/api/objs/movie_player.cpp         \
    scripting/api/objs/object.cpp               \
    scripting/api/objs/order.cpp                \
    scripting/api/objs/particle.cpp             \
    scripting/api/objs/physics_info.cpp         \
    scripting/api/objs/player.cpp               \
    scripting/api/objs/sexpvar.cpp              \
    scripting/api/objs/shields.cpp              \
    scripting/api/objs/ship.cpp                 \
    scripting/api/objs/ship_bank.cpp            \
    scripting/api/objs/shipclass.cpp            \
    scripting/api/objs/shiptype.cpp             \
    scripting/api/objs/sound.cpp                \
    scripting/api/objs/species.cpp              \
    scripting/api/objs/streaminganim.cpp        \
    scripting/api/objs/subsystem.cpp            \
    scripting/api/objs/team.cpp                 \
    scripting/api/objs/texture.cpp              \
    scripting/api/objs/texturemap.cpp           \
    scripting/api/objs/time_obj.cpp             \
    scripting/api/objs/vecmath.cpp              \
    scripting/api/objs/waypoint.cpp             \
    scripting/api/objs/weapon.cpp               \
    scripting/api/objs/weaponclass.cpp          \
    scripting/api/objs/wing.cpp                 \
    scripting/lua.cpp                           \
    scripting/lua/LuaArgs.cpp                   \
    scripting/lua/LuaConvert.cpp                \
    scripting/lua/LuaFunction.cpp               \
    scripting/lua/LuaReference.cpp              \
    scripting/lua/LuaTable.cpp                  \
    scripting/lua/LuaUtil.cpp                   \
    scripting/lua/LuaValue.cpp                  \
    scripting/scripting.cpp                     \
    ship/afterburner.cpp                        \
    ship/awacs.cpp                              \
    ship/shield.cpp                             \
    ship/ship.cpp                               \
    ship/shipcontrails.cpp                      \
    ship/shipfx.cpp                             \
    ship/shiphit.cpp                            \
    sound/audiostr.cpp                          \
    sound/ds.cpp                                \
    sound/ds3d.cpp                              \
    sound/dscap.cpp                             \
    sound/ffmpeg/FFmpegAudioReader.cpp          \
    sound/ffmpeg/WaveFile.cpp                   \
    sound/fsspeech.cpp                          \
    sound/openal.cpp                            \
    sound/rtvoice.cpp                           \
    sound/sound.cpp                             \
    sound/speech.cpp                            \
    sound/voicerec.cpp                          \
    species_defs/species_defs.cpp               \
    starfield/nebula.cpp                        \
    starfield/starfield.cpp                     \
    starfield/supernova.cpp                     \
    stats/medals.cpp                            \
    stats/scoring.cpp                           \
    stats/stats.cpp                             \
    tgautils/tgautils.cpp                       \
    tracing/FrameProfiler.cpp                   \
    tracing/MainFrameTimer.cpp                  \
    tracing/Monitor.cpp                         \
    tracing/TraceEventWriter.cpp                \
    tracing/categories.cpp                      \
    tracing/scopes.cpp                          \
    tracing/tracing.cpp                         \
    ui/button.cpp                               \
    ui/checkbox.cpp                             \
    ui/gadget.cpp                               \
    ui/icon.cpp                                 \
    ui/inputbox.cpp                             \
    ui/keytrap.cpp                              \
    ui/listbox.cpp                              \
    ui/radio.cpp                                \
    ui/scroll.cpp                               \
    ui/slider.cpp                               \
    ui/slider2.cpp                              \
    ui/uidraw.cpp                               \
    ui/uimouse.cpp                              \
    ui/window.cpp                               \
    utils/HeapAllocator.cpp                     \
    utils/encoding.cpp                          \
    utils/unicode.cpp                           \
    weapon/beam.cpp                             \
    weapon/corkscrew.cpp                        \
    weapon/emp.cpp                              \
    weapon/flak.cpp                             \
    weapon/muzzleflash.cpp                      \
    weapon/shockwave.cpp                        \
    weapon/swarm.cpp                            \
    weapon/trails.cpp                           \
    weapon/weapons.cpp                          \
    windows_stub/stubs.cpp

fs2_CPPFLAGS =                                  \
    -DLUA_USE_MACOSX -DAPPLE_APP -DSCP_UNIX     \
    -I.                                         \
    -I$(top_srcdir)/src/external/lua            \
    -I$(top_srcdir)/src/external                \
    -I/opt/local/include/SDL2                   \
    -I/opt/local/include                        \
    -isystem OpenAL

fs2_LDADD =							                    \
    $(top_srcdir)/src/external/lua/liblua51.a			\
    $(top_srcdir)/src/external/glad/libglad.a			\
    $(top_srcdir)/src/external/mongoose/libmongoose.a	\
    -L/opt/local/lib -lSDL2								\
    -lavcodec											\
    -lavdevice											\
    -lavformat											\
    -lavfilter											\
    -lavutil											\
    -lpostproc											\
    -lswscale											\
    -lswresample										\
    -ljsoncpp -ljpeg -lpng

fs2_LDFLAGS = -framework OpenAL
